Initial Model created. Scaffolded.

--- a/RazorPagesMonster2/appsettings.json
+++ b/RazorPagesMonster2/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "RazorPagesMonster2Context": "Server=(localdb)\\mssqllocaldb;Database=RazorPagesMonster2Context-1ed87854-b9c6-4d58-a37b-bace72df7f16;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
